# boundbook

./: Cargo.toml  README.md  clippy.toml  rustfmt.toml
.mise/tasks/: build.nu  check.nu  test.nu
completions/: boundbook.bash  boundbook.clink  boundbook.elv  boundbook.fig  boundbook.fish  boundbook.nu  boundbook.ps1  boundbook.zsh
examples/: create_simple_book.rs  read_and_verify.rs
src/: _types.rs  builder.rs  error.rs  format.rs  lib.rs  main.rs  reader.rs  types.rs
src/cli/: commands.rs  help.rs  mod.rs
src/cli/commands/: complete.rs  create.rs  extract.rs  from_cbz.rs  info.rs  read.rs  verify.rs
src/cli/commands/read/: interpolate.rs  render.rs  state.rs  tui.rs
