[package]
name = "boundbook"
version = "0.2.51"
edition = "2024"
authors = ["The Motherfucking Bearodactyl", "ef1500"]
readme = "README.md"
keywords = ["comics", "manga", "bbf", "cli", "boundbook"]
categories = ["multimedia", "encoding"]
description = "A Rust rewrite of the Bound Book format by ef1500"
license-file = "LICENSE"
homepage = "https://github.com/TheBearodactyl/boundbook"
repository = "https://github.com/TheBearodactyl/boundbook"

[dependencies]
alphanumeric-sort = "1.5.5"
arboard = "3.6.1"
assert2 = "0.3.16"
clap = { version = "4.5.56", features = ["derive"] }
clap-markdown = "0.1.5"
clap_complete = "4.5.65"
clap_complete_clink = "1.0.0"
clap_complete_nushell = "4.5.10"
crossterm = "0.29.0"
dirs = "6.0.0"
display-info = "0.5.7"
gif = "0.14.1"
gif-dispose = "6.0.0"
hashbrown = "0.16.1"
icy_sixel = "0.5.0"
image = "0.25.9"
indicatif = { version = "0.18.3", features = ["improved_unicode"] }
inquire = "0.9.2"
lerp = "0.5.0"
macroni-n-cheese = "0.1.6"
memmap2 = "0.9.9"
miette = { version = "7.6.0", features = ["fancy"] }
mimalloc = "0.1.48"
nalgebra = "0.34.1"
ratatui = "0.30.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.24.0"
thiserror = "2.0.18"
toml = "0.9.11"
tui-tree-widget = "0.24.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3", "xxh32", "xxh64"] }
zip = "7.2.0"

[lints.clippy]
missing_const_for_fn = "warn"
missing_panics_doc = "warn"
arithmetic_side_effects = "deny"

[lints.rust]
missing_docs = "warn"

[dev-dependencies]
tempfile = "3.24.0"
