[package]
name = "boundbook"
version = "0.3.12"
edition = "2024"
authors = ["The Motherfucking Bearodactyl", "ef1500"]
readme = "README.md"
keywords = ["comics", "manga", "bbf", "cli", "boundbook"]
categories = ["multimedia", "encoding"]
description = "A Rust rewrite of the Bound Book format by ef1500"
license-file = "LICENSE"
homepage = "https://github.com/TheBearodactyl/boundbook"
repository = "https://github.com/TheBearodactyl/boundbook"

[dependencies]
alphanumeric-sort = { version = "1.5.5", optional = true }
arboard = "3.6.1"
assert2 = "0.3.16"
clap = { version = "4.5.56", features = ["derive"], optional = true }
clap-markdown = { version = "0.1.5", optional = true }
clap_complete = { version = "4.5.65", optional = true }
clap_complete_clink = { version = "1.0.0", optional = true }
clap_complete_fig = { version = "4.5.2", optional = true }
clap_complete_nushell = { version = "4.5.10", optional = true }
crossterm = { version = "0.29.0", optional = true }
dirs = { version = "6.0.0", optional = true }
display-info = { version = "0.5.7", optional = true }
gif = { version = "0.14.1", optional = true }
gif-dispose = { version = "6.0.0", optional = true }
hashbrown = "0.16.1"
icy_sixel = { version = "0.5.0", optional = true }
image = { version = "0.25.9", optional = true }
indicatif = { version = "0.18.3", features = ["improved_unicode"] }
inquire = "0.9.2"
lerp = { version = "0.5.0", optional = true }
macroni-n-cheese = "0.1.6"
memmap2 = "0.9.9"
miette = { version = "7.6.0", features = ["fancy"] }
mimalloc = { version = "0.1.48", optional = true }
nalgebra = { version = "0.34.1", optional = true }
ratatui = { version = "0.30.0", optional = true }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"], optional = true }
tempfile = "3.24.0"
thiserror = "2.0.18"
toml = { version = "0.9.11", optional = true }
tui-tree-widget = { version = "0.24.0", optional = true }
xxhash-rust = { version = "0.8.15", features = ["xxh3", "xxh32", "xxh64"] }
zip = { version = "7.2.0", optional = true }

[lints.clippy]
missing_const_for_fn = "warn"
missing_panics_doc = "warn"
arithmetic_side_effects = "deny"

[lints.rust]
missing_docs = "warn"

[dev-dependencies]
tempfile = "3.24.0"

[features]
default = ["cli"]
cli = [
    "dep:alphanumeric-sort",
    "dep:clap",
    "dep:clap-markdown",
    "dep:clap_complete",
    "dep:clap_complete_clink",
    "dep:clap_complete_nushell",
    "dep:clap_complete_fig",
    "dep:crossterm",
    "dep:dirs",
    "dep:display-info",
    "dep:gif",
    "dep:gif-dispose",
    "dep:icy_sixel",
    "dep:image",
    "dep:lerp",
    "dep:mimalloc",
    "dep:nalgebra",
    "dep:ratatui",
    "dep:serde",
    "dep:toml",
    "dep:tui-tree-widget",
    "dep:zip",
]
